# blobboxes

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  build_all.sh  pyproject.toml  test.py  test_cross_check.sh
.forgejo/workflows/: build-and-publish.yml
.github/workflows/: ci.yml  release.yml
bench/: bench_reader.cpp
browser/: build.js  package-lock.json  package.json
browser/src/: bbox.js  classify.js  highlight.js  index.js  observer.js
docs/: Application Architecture — Documents as a Table of Boxes.md  Architectural Patterns — Extraction, Bbox, Parquet.md  Document Metadata Schema.md  Evidence Pipeline Architecture.md  Hash Collision Analysis for Domain Filters.md  Progressive Masking and Treemap Layout.md  Python Cursor as SQL Escape Hatch.md  System Architecture — The blob Chassis.md  TODO-browser-bundle.md  bbox-as-universal-ir.md  blobboxes — A Grand Unified Index (Pitch).md  blobstemma — Ancestry of Tables Across Manifestations.md  browser-bundle-design.md  browser-table-extraction.md  design-critique.md  google-api-templates.md  google-sheets-to-bboxes.md  google-sheets-xlsx-fidelity.md
duckdb_ext/src/: bboxes_ext.cpp  pdf_bboxes_ext.cpp
example/: main.cpp
examples/pdf_overlay/: .gitignore  README.md  fetch_sample.sh  overlay.py
experiments/: analyze_columns.py  bbox_sieve.py  bbox_sieve_with_filters.py  bench_e2e.py  bench_pdf_extract.py  evidence_pipeline.py  fintabnet_eval.py  gen_twocol.py  generate_test_docs.py  google_drive_openbao.py  hypotheses.py  ifc_mep_taxonomy.md  layout_detect.py  llm_classify_tokens.py  mep_equipment_domain_research.md  progressive_masking.py  render_interactive.py  render_pdf_overlay.py  scatter_pipeline.py  scatter_table_detect.py  table_then_sieve_then_llm.py
ext/duckdb/: CMakeLists.txt  pyproject.toml  test_extension.py
ext/duckdb/blobboxes_duckdb/: __init__.py
ext/sqlite/: CMakeLists.txt  pyproject.toml  test_extension.py
ext/sqlite/blobboxes_sqlite/: __init__.py
include/: bboxes.h  bboxes_md5.h  bboxes_types.h  pdf_bboxes.h
python/: bindings.cpp
python/bboxes/: __init__.py  schema.py
python/blobboxes/: __init__.py  browser.py  http_controller.py  proxy_addon.py  run_proxy.py  schema.py
python/pdf_bboxes/: __init__.py
sqlite_ext/src/: bboxes_sqlite.cpp  pdf_bboxes_sqlite.cpp
src/: bboxes_core.cpp  bboxes_docx.cpp  bboxes_html.cpp  bboxes_meta.cpp  bboxes_pdf.cpp  bboxes_sql.cpp  bboxes_text.cpp  bboxes_xfdf.cpp  bboxes_xlsx.cpp  pdf_bboxes.cpp
test_data/: sample.db  sample.docx  sample.html  sample.txt  sample.xlsx
test_data/fintabnet/: manifest.json
test_data/fintabnet/annotations/: AAPL_2006_page_67_tables.json  AIG_2013_page_143_tables.json  BWA_2009_page_73_tables.json  BWA_2017_page_37_tables.json  CFG_2014_page_161_tables.json  CF_2012_page_200_tables.json  CMCSA_2008_page_59_tables.json  CNC_2006_page_37_tables.json  C_2018_page_247_tables.json  DLR_2016_page_142_tables.json  DVA_2003_page_40_tables.json  DVA_2013_page_141_tables.json  DVN_2014_page_26_tables.json  ECL_2016_page_69_tables.json  EIX_2009_page_153_tables.json  EMN_2007_page_72_tables.json  ETR_2004_page_253_tables.json  FAST_2016_page_45_tables.json  FRT_2007_page_68_tables.json  GL_2012_page_59_tables.json  HAS_2017_page_92_tables.json  HBAN_2009_page_112_tables.json  HBAN_2011_page_77_tables.json  HES_2014_page_50_tables.json  HRB_2004_page_121_tables.json  HRB_2012_page_95_tables.json  IEX_2009_page_59_tables.json  IRM_2004_page_114_tables.json  JPM_2004_page_86_tables.json  KSU_2017_page_87_tables.json  LKQ_2012_page_24_tables.json  L_2009_page_115_tables.json  MET_2009_page_33_tables.json  MOS_2013_page_62_tables.json  MSFT_2017_page_75_tables.json  NEE_2009_page_80_tables.json  NLOK_2014_page_130_tables.json  PG_2012_page_72_tables.json  PNC_2011_page_90_tables.json  PNR_2016_page_69_tables.json  (+10 more)
test_data/synthetic/: 06_sales_simple.xlsx  07_inventory_titled.xlsx  ground_truth.json  llm_classify_prompt.txt  unresolved_tokens.json
tools/: artifact_driver.py  fetch_pdf_testsuite.py
