[build-system]
requires = ["scikit-build-core>=0.5", "nanobind>=1.5"]
build-backend = "scikit_build_core.build"

[project]
name = "blobboxes"
version = "0.3.0"
requires-python = ">=3.8"
description = "Extract text bounding boxes, fonts, and styles from documents"
license = {text = "MIT"}

[tool.scikit-build]
cmake.args = ["-DBUILD_PYTHON_BINDINGS=ON"]
wheel.packages = ["python/blobboxes"]
