[build-system]
requires = ["scikit-build-core>=0.5", "nanobind>=1.5"]
build-backend = "scikit_build_core.build"

[project]
name = "blobboxes"
version = "0.4.5"
description = "Extract text bounding boxes, fonts, and styles from documents"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [{name = "Paul Harrington"}]
dependencies = ["shapely>=2.0"]
keywords = ["pdf", "xlsx", "docx", "bounding-box", "text-extraction", "duckdb", "sqlite", "browser", "web-scraping"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
    "Topic :: Text Processing",
]

[project.optional-dependencies]
browser = ["playwright>=1.40", "mitmproxy>=10.0"]
schema = ["pydantic>=2.0"]

[project.urls]
Repository = "https://github.com/phrrngtn/blobboxes"

[tool.scikit-build]
cmake.args = ["-DBUILD_PYTHON_BINDINGS=ON"]
wheel.packages = ["python/blobboxes"]
