[build-system]
requires = ["scikit-build-core>=0.5"]
build-backend = "scikit_build_core.build"

[project]
name = "blobboxes-duckdb"
version = "0.4.5"
description = "bounding box extraction from documents — Duckdb extension"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [{name = "Paul Harrington"}]
dependencies = []

[tool.scikit-build]
wheel.packages = ["blobboxes_duckdb"]
sdist.include = ["src/**", "include/**", "duckdb_ext/**"]
