[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "blobboxes-duckdb"
version = "0.4.5"
description = "bounding box extraction from documents — DuckDB extension"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [{name = "Paul Harrington"}]
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["blobboxes_duckdb"]

[tool.setuptools.package-data]
blobboxes_duckdb = ["*.duckdb_extension", "*.dylib", "*.so", "*.dll"]
